# ESSColor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Snakefile.smk  compile.sh  download_ncbi_dataset.sh  pipeline_compress.smk
example/mini_k18c4m7/: col_bitmatrix  ess_boundary_bit.txt  uniq_ms.txt
examples/mini_k18c4m7/: c1.fa  c3.fa
examples/sample3/fa/: c2.fa
examples/sample3/k5/: config.yaml
include/: dictionary.hpp
include/builder/: parse_file.hpp
include/query/: streaming_query.hpp
lib/: CMakeLists.txt  CMakeLists_cmph.txt  CMakeLists_kmc.txt  CMakeLists_sshash.txt  parse_file.hpp
src/: CMakeLists.txt  amatur.cpp  bench_utils.hpp  build.cpp  check_utils.hpp  colormatrix.cpp  colormatrix.hpp  common.hpp  compress.cpp  compress_matrix.cpp  config_writer.cpp  decompress.cpp  decompress_matrix.cpp  genMatrix.cpp  kmerlist.cpp  permute.cpp  query.cpp  sshash.cpp
src/essCompress/: decoder.cpp  decoder.hpp  ess.cpp  ess.hpp  misc.hpp  param.hpp  profileGraph.hpp  spss.hpp  stat.hpp  tip.hpp  ust.hpp
